Add connection to api and basic operations

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,7 @@
             class="self-end border-2 shadow-md shadow-slate-700 border-slate-700 px-2 text-xl"
           />
         </form>
+        <label id="message" class="text-blue-600"></label>
       </section>
     </main>
   </body>
