--- a/src/index.html
+++ b/src/index.html
@@ -5,24 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leaderboard</title>
   </head>
-  <body>
-    <header><h1 class="text-4xl font-bold px-8 py-4">Leaderboard</h1></header>
+  <body class="max-h-screen overflow-hidden p-8 h-screen relative">
+    <div class="absolute top-1 right-1 p-4 backdrop-blur-lg shadow-md">
+      Added succesfully
+      <button>OK</button>
+    </div>
+    <header>
+      <h1 class="text-4xl font-bold px-8 py-4 mx-8">Leaderboard</h1>
+    </header>
     <main
-      class="flex flex-col md:flex-row items-start justify-evenly p-4 w-full"
+      class="flex flex-col md:flex-row items-start justify-evenly h-fit w-auto mx-16 p-4 shadow-inner shadow-slate-50 rounded-md backdrop-blur-sm relative border"
     >
       <section class="w-full md:w-1/3 my-4">
         <div class="flex justify-between items-center p-2">
           <h2 class="lg:text-3xl text-2xl">Recent scores</h2>
           <button
             id="refresh"
-            class="border-2 shadow-md shadow-slate-700 border-slate-700 px-2 text-xl"
+            class="rounded-md backdrop-blur-md shadow-md px-4 py-2 text-xl hover:bg-[#44b5] hover:text-slate-50 active:shadow-inner"
           >
             Refresh
           </button>
         </div>
         <ul
           id="list"
-          class="border-2 border-slate-800 p-4 rounded-md w-full"
+          class="border-1 border-slate-200 backdrop-blur-3xl p-4 rounded-md shadow-xl w-full max-h-[60vh] overflow-auto"
         ></ul>
       </section>
       <section
@@ -34,7 +40,7 @@
             type="text"
             name="name"
             id="name"
-            class="w-60 sm:w-80 text-xl px-4 py-2 border-2 border-slate-700"
+            class="w-60 sm:w-80 text-xl px-4 py-2 bg-[#6663] placeholder:text-slate-900 rounded-md focus:border-sky-500 outline-none focus:shadow-md focus:shadow-sky-500"
             required
             placeholder="Your name"
           />
@@ -44,14 +50,14 @@
             max="100"
             name="score"
             id="score"
-            class="w-60 sm:w-80 text-xl px-4 py-2 border-2 border-slate-700"
+            class="w-60 sm:w-80 text-xl px-4 py-2 bg-[#6663] placeholder:text-slate-900 rounded-md focus:border-sky-500 outline-none focus:shadow-md focus:shadow-sky-500"
             required
             placeholder="Your score"
           />
           <input
             type="submit"
             value="Submit"
-            class="self-end border-2 shadow-md shadow-slate-700 border-slate-700 px-2 text-xl"
+            class="self-end rounded-md backdrop-blur-md shadow-md px-4 py-2 text-xl cursor-pointer hover:bg-[#44b5] hover:text-slate-50 active:shadow-inner"
           />
         </form>
         <label id="message" class="text-blue-600"></label>
